@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-19T08:33:16Z",
+  "timestamp" : "2022-10-19T16:31:29Z",
   "count_outdated" : 591,
   "uniques_outdated" : 338,
-  "count" : 626,
+  "count" : 627,
   "uniques" : 360,
   "clones" : [
     {
@@ -77,8 +77,8 @@
     },
     {
       "timestamp": "2022-10-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
