@@ -1,5 +1,5 @@
 {
-  "count": 35,
+  "count": 36,
   "uniques": 12,
   "clones": [
     {
@@ -54,7 +54,7 @@
     },
     {
       "timestamp": "2022-10-19T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
