@@ -1,3 +1,11 @@
+2022-10-19T16:31:29Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3283343376 # 950
+* notice: last 14d: unq all: 12 36
+* notice: prev accum: outdated-unq outdated-all / unq all: 338 591 / 360 626
+* notice: next accum: outdated-unq outdated-all / unq all: 338 591 / 360 627
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-10-19]
+
 2022-10-19T08:33:16Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3279995050 # 949
 * notice: last 14d: unq all: 12 35
